# voix9

./: .gitmodules  README.md
capture/: CMakeLists.txt  README.md  capture.cpp
capture/include/: safe-queue.hpp
capture/parser/: CMakeLists.txt  parser.cpp  parser.hpp
frontend/: README.md  index.js  package-lock.json  package.json  router-api.js  server.js  stream-manager.js
frontend/content_root/: index.html
scripts/: setup_requirements_centos8.sh
tools/rtpsend/: CMakeLists.txt  rtpsend.cpp
webapi/: README.md  google-speech.js  package-lock.json  package.json  redis-stream.js  server.js  stream-manager.js
webapi/content_root/: index.html
webapi/content_root/css/: aside-message.css  index.css
webapi/content_root/js/: index.js  playrtp.js
